--- a/hkube/templates/datasource-cleaner-deployment.yaml
+++ b/hkube/templates/datasource-cleaner-deployment.yaml
@@ -49,32 +49,6 @@ spec:
                 configMapKeyRef:
                   name: datasource-cleaner-configmap
                   key: CLUSTER_NAME
-{{- if eq .Values.env.default_storage "fs" }}
-            - name: BASE_FS_ADAPTER_DIRECTORY
-              valueFrom:
-                configMapKeyRef:
-                  name: api-server-configmap
-                  key: BASE_FS_ADAPTER_DIRECTORY
-{{- else if eq .Values.env.default_storage "s3" }}
-            - name: AWS_ACCESS_KEY_ID
-              valueFrom:
-                secretKeyRef:
-                  name: s3-secret
-                  key: awsKey
-            - name: AWS_SECRET_ACCESS_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: s3-secret
-                  key: awsSecret
-            - name: S3_ENDPOINT_URL
-              valueFrom:
-                secretKeyRef:
-                  name: s3-secret
-                  key: awsEndpointUrl
-{{- end }}  
-            - name: DEFAULT_STORAGE
-              valueFrom:
-                configMapKeyRef:
-                  name: datasource-cleaner-configmap
-                  key: DEFAULT_STORAGE
+            - name: BASE_DATASOURCES_DIRECTORY
+              value: "/hkube/datasources-storage"
           restartPolicy: Never
