--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -148,14 +148,14 @@ gitea:
   enable: true
   service:
     http:
-      port: 3000
+      port: '3000'
   gitea:
     config:
       repository:
         ENABLE_PUSH_CREATE_USER: true
     admin:
       username: hkube
-      password: 123456
+      password: '123456'
       email: "hkube@hkube.io"
   postgresql:
     securityContext:
