--- a/hkube/templates/datasource-cleaner-deployment.yaml
+++ b/hkube/templates/datasource-cleaner-deployment.yaml
@@ -51,4 +51,21 @@ spec:
                   key: CLUSTER_NAME
             - name: BASE_DATASOURCES_DIRECTORY
               value: "/hkube/datasources-storage"
+{{- if .Values.mongodb.enable }}
+            - name: MONGODB_SERVICE_USER_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-username
+            - name: MONGODB_SERVICE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-password
+            - name: MONGODB_DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-database
+{{- end }}
           restartPolicy: Never
