--- a/hkube/templates/configmaps/gitea-secret.yaml
+++ b/hkube/templates/configmaps/gitea-secret.yaml
@@ -3,7 +3,7 @@ metadata:
   name: gitea-secret
   namespace: {{ .Release.Namespace }}
 data:
-  endpointUrl: {{ printf "gitea-http:%s" .Values.gitea.service.http.port | b64enc | quote}}
+  endpointUrl: {{ printf "http://gitea-http:%s" .Values.gitea.service.http.port | b64enc | quote}}
   username: {{ .Values.gitea.gitea.admin.username | b64enc | quote }}
   password: {{ .Values.gitea.gitea.admin.password | b64enc | quote }}
 kind: Secret
