--- a/hkube/templates/configmaps/pipeline-driver-cm.yaml
+++ b/hkube/templates/configmaps/pipeline-driver-cm.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   NODE_ENV: {{.Values.env.node_env}}
   DEFAULT_STORAGE: {{index .Values "env" "default_storage"}}
-  STORAGE_RESULTS_THRESHOLD: {{index .Values.global.storage.storageResultsThreshold | quote}}
+  STORAGE_RESULTS_THRESHOLD: {{index .Values.pipeline_driver.env.storageResultsThreshold | quote}}
 {{- if eq .Values.env.default_storage "fs" }}
   BASE_FS_ADAPTER_DIRECTORY: {{ .Values.global.storage.fs.base_directory | quote}}
 {{- end }}   
