--- a/hkube/templates/simulator-ingress.yaml
+++ b/hkube/templates/simulator-ingress.yaml
@@ -17,7 +17,11 @@ metadata:
       }
 {{- end }}      
 {{- if .Values.global.ingress.use_regex }}
+{{- if and (eq .Values.simulator.ingress.path "/") (not .Values.global.ingress.prefix) }}
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+{{- else }}
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+{{- end }}
 {{- else }}
     nginx.ingress.kubernetes.io/rewrite-target: /
 {{- end }}
@@ -42,7 +46,11 @@ spec:
     - http:
         paths:
 {{- if .Values.global.ingress.use_regex }}
+{{- if and (eq .Values.simulator.ingress.path "/") (not .Values.global.ingress.prefix) }}
+        - path: {{ .Values.global.ingress.prefix }}{{ .Values.simulator.ingress.path }}(.*)
+{{- else }}
         - path: {{ .Values.global.ingress.prefix }}{{ .Values.simulator.ingress.path }}(/|$)(.*)
+{{- end }}
 {{- else }}
         - path: {{ .Values.global.ingress.prefix }}{{ .Values.simulator.ingress.path }}
 {{- end }}
