--- a/hkube/templates/algorithm-queue-svc.yaml
+++ b/hkube/templates/algorithm-queue-svc.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
   name: algorithm-queue-svc
   annotations:
@@ -11,11 +11,12 @@ metadata:
     heritage: {{ .Release.Service }}
     group: {{ .Values.labels.group.value }}
     core: "true"
+    metrics: "true"
 spec:
-  type: {{ index .Values "algorithm_queue_svc" "service" "type" }}
   ports:
-    - port: {{ index .Values "algorithm_queue_svc" "env" "metric_port" }}
-      targetPort: {{ index .Values "algorithm_queue_svc" "env" "metric_port" }}
+    - port: {{ .Values.algorithm_queue_svc.env.metric_port }}
+      targetPort: {{ .Values.algorithm_queue_svc.env.metric_port }}
       protocol: TCP
+      name: metrics
   selector:
     metrics-group: 'algorithm-queue'
