--- a/hkube/requirements.yaml
+++ b/hkube/requirements.yaml
@@ -1,33 +1,33 @@
 dependencies:
   - name: etcd
     version: "0.7.2016"
-    repository: "http://hkube.io/helm/"
+    repository: "https://hkube.io/helm/"
     condition: etcd.enable
   - name: etcd-operator
     version: "0.9.7"
-    repository: "http://hkube.io/helm/"
+    repository: "https://hkube.io/helm/"
     condition: etcd-operator.enable
   - name: jaeger
     version: "0.27.2005"
-    repository: "http://hkube.io/helm/"
+    repository: "https://hkube.io/helm/"
     condition: jaeger.enable
   - name: redis-ha
     version: "3.6.1005"
-    repository: "http://hkube.io/helm/"
+    repository: "https://hkube.io/helm/"
     condition: redis-ha.enable
   - name: nginx-ingress
     version: "1.31.1002"
-    repository: "http://hkube.io/helm/"
+    repository: "https://hkube.io/helm/"
     condition: nginx-ingress.enable
   - name: minio
     version: "5.0.1024"
-    repository: "http://hkube.io/helm/"
+    repository: "https://hkube.io/helm/"
     condition: minio.enable
   - name: mongodb
     version: "10.0.1000"
-    repository: "http://hkube.io/helm/"
+    repository: "https://hkube.io/helm/"
     condition: mongodb.enable
   - name: gitea
     version: "2.1.3004"
-    repository: "http://hkube.io/helm/"
+    repository: "https://hkube.io/helm/"
     condition: gitea.enable    
