--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -138,7 +138,7 @@ metrics:
     release: metrics
   grafanaDashboardLabel:
     grafana_dashboard: '1'
-systemversion: v1.3.162
+systemversion: v1.3.163
 build_secret:
 # docker registry for algorithm builds. defaults to docker.io
   docker_registry: ''
@@ -225,12 +225,20 @@ api_server: # +doc-gen:ignore
     pipeline_driver_mem: '512'
   image:
     repository: hkube/api-server
-    tag: v1.3.44
+    tag: v1.3.45
   ingress:
     enabled: true
     path: /hkube/api-server
   service:
     type: ClusterIP
+  healthcheck: # +doc-gen:ignore
+    enabled: true
+    port: 5000
+    path: /healthz
+    initialDelaySeconds: 100
+    periodSeconds: 60
+    timeoutSeconds: 1
+    failureThreshold: 3
   resources:
     requests:
       cpu: 100m
@@ -337,7 +345,7 @@ pipeline_cleaner: # +doc-gen:ignore
   pattern: '*/5 * * * *'
   image:
     repository: hkube/pipeline-cleaner
-    tag: v1.3.1
+    tag: v1.3.2
   resources:
     requests:
       cpu: 100m
@@ -580,4 +588,4 @@ storage_migration: # +doc-gen:ignore
   image:
     repository: hkube/storage-migration
     tag: v1.3.2
-fullSystemVersion: v1.3.162-1615204345382
+fullSystemVersion: v1.3.163-1619360459382
