--- a/hkube/templates/algorithm-operator-deployment.yaml
+++ b/hkube/templates/algorithm-operator-deployment.yaml
@@ -79,6 +79,11 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: ALGORITHM_QUEUE_CONCURRENCY_LIMIT
+              valueFrom:
+                configMapKeyRef:
+                  name: algorithm-operator-configmap
+                  key: ALGORITHM_QUEUE_CONCURRENCY_LIMIT
             - name: DEFAULT_STORAGE
               valueFrom:
                 configMapKeyRef:
