--- a/hkube/templates/task-executor-deployment.yaml
+++ b/hkube/templates/task-executor-deployment.yaml
@@ -95,6 +95,11 @@ spec:
                 configMapKeyRef:
                   name: task-executor-configmap
                   key: DEFAULT_STORAGE
+            - name: PIPELINE_DRIVERS_CONCURRENCY_LIMIT
+              valueFrom:
+                configMapKeyRef:
+                  name: task-executor-configmap
+                  key: PIPELINE_DRIVERS_CONCURRENCY_LIMIT
             - name: STORAGE_ENCODING
               valueFrom:
                 configMapKeyRef:
