--- a/hkube/Chart.yaml
+++ b/hkube/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
-appVersion: "1.2"
-version: 0.1.2
+appVersion: v2.0.142
+version: v2.0.262
 description: A Helm chart HPC on Kubernetes ( hkube )
 name: hkube
 home: https://hkube.io/
