--- a/hkube/templates/hkube-gc-deployment.yaml
+++ b/hkube/templates/hkube-gc-deployment.yaml
@@ -31,6 +31,12 @@ spec:
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- if eq .Values.env.default_storage "fs" }}
+      volumes:
+        - name: storage-volume
+          persistentVolumeClaim:
+            claimName: hkube-storage-pvc
+{{- end }}  
       serviceAccountName: hkube-gc
       containers:
         - name: hkube-gc
@@ -51,30 +57,246 @@ spec:
 {{ toYaml .Values.hkube_gc.resources | indent 12 }}
 {{- else }}
           resources: {}
-{{- end }}     
+{{- end }}
+{{- if eq .Values.env.default_storage "fs" }}
+          volumeMounts:
+            - name: storage-volume
+              mountPath: {{ .Values.global.storage.fs.base_directory | quote}}
+{{- end }} 
           env:
             - name: NODE_ENV
               valueFrom:
                 configMapKeyRef:
                   name: hkube-gc-configmap
                   key: NODE_ENV
-            - name: "MAX_COMPLETED_JOB_AGE_HOURS"
+            - name: HKUBE_LOG_LEVEL
               valueFrom:
                 configMapKeyRef:
                   name: hkube-gc-configmap
-                  key: MAX_COMPLETED_JOB_AGE_HOURS
-            - name: "MAX_FAILED_JOB_AGE_HOURS"
+                  key: HKUBE_LOG_LEVEL
+            - name: METRICS_PORT
               valueFrom:
                 configMapKeyRef:
                   name: hkube-gc-configmap
-                  key: MAX_FAILED_JOB_AGE_HOURS
-            - name: "MAX_PENDING_JOB_AGE_HOURS"
+                  key: METRICS_PORT
+            - name: REST_PORT
               valueFrom:
                 configMapKeyRef:
                   name: hkube-gc-configmap
-                  key: MAX_PENDING_JOB_AGE_HOURS
+                  key: REST_PORT
+            - name: BASE_URL_PATH
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: BASE_URL_PATH
+
+            - name: DATASOURCE_CRON
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: DATASOURCE_CRON
+            - name: DATASOURCE_ENABLED
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: DATASOURCE_ENABLED
+            - name: DATASOURCE_MAX_AGE
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: DATASOURCE_MAX_AGE 
+            - name: DATASOURCE_BASE_DIRECTORY
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: DATASOURCE_BASE_DIRECTORY 
+            - name: DATASOURCE_FOLDER_IN_USE
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: DATASOURCE_FOLDER_IN_USE 
+            - name: DEBUG_CRON
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: DEBUG_CRON 
+            - name: DEBUG_ENABLED
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: DEBUG_ENABLED
+            - name: DEBUG_MAX_AGE
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: DEBUG_MAX_AGE 
+            - name: ETCD_CRON
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: ETCD_CRON 
+            - name: ETCD_ENABLED
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: ETCD_ENABLED 
+            - name: ETCD_MAX_AGE
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: ETCD_MAX_AGE
+            - name: GATEWAY_CRON
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: GATEWAY_CRON 
+            - name: GATEWAY_ENABLED
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: GATEWAY_ENABLED 
+            - name: GATEWAY_MAX_AGE
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: GATEWAY_MAX_AGE 
+            - name: JOBS_CRON
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: JOBS_CRON
+            - name: JOBS_ENABLED
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: JOBS_ENABLED 
+            - name: JOBS_COMPLETED_MAX_AGE
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: JOBS_COMPLETED_MAX_AGE 
+            - name: JOBS_FAILED_MAX_AGE
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: JOBS_FAILED_MAX_AGE 
+            - name: JOBS_PENDING_MAX_AGE
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: JOBS_PENDING_MAX_AGE
+                        - name: DEBUG_CRON
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: DEBUG_CRON 
+            - name: PIPELINES_CRON
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: PIPELINES_CRON
+            - name: PIPELINES_ENABLED
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: PIPELINES_ENABLED
+            - name: REDIS_CRON
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: REDIS_CRON 
+            - name: REDIS_ENABLED
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: REDIS_ENABLED
+            - name: REDIS_MAX_AGE
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: REDIS_MAX_AGE
+            - name: STORAGE_CRON
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: STORAGE_CRON 
+            - name: STORAGE_ENABLED
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: STORAGE_ENABLED
+            - name: STORAGE_RESULT_MAX_AGE
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: STORAGE_RESULT_MAX_AGE
+            - name: STORAGE_TEMP_MAX_AGE
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: STORAGE_TEMP_MAX_AGE
+{{- if eq .Values.env.default_storage "fs" }}
+            - name: BASE_FS_ADAPTER_DIRECTORY
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: BASE_FS_ADAPTER_DIRECTORY
+{{- else if eq .Values.env.default_storage "s3" }}
+            - name: AWS_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: s3-secret
+                  key: awsKey
+            - name: AWS_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: s3-secret
+                  key: awsSecret
+            - name: S3_ENDPOINT_URL
+              valueFrom:
+                secretKeyRef:
+                  name: s3-secret
+                  key: awsEndpointUrl
+{{- end }}                                    
+            - name: DEFAULT_STORAGE
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: DEFAULT_STORAGE
+            - name: STORAGE_ENCODING
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: STORAGE_ENCODING                  
+            - name: CLUSTER_NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: CLUSTER_NAME  
             - name: NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: INGRESS_PREFIX
+              valueFrom:
+                configMapKeyRef:
+                  name: hkube-gc-configmap
+                  key: INGRESS_PREFIX
+{{- if .Values.mongodb.enable }}
+            - name: MONGODB_SERVICE_USER_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-username
+            - name: MONGODB_SERVICE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-password
+            - name: MONGODB_DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-database
+{{- end }}
 
